trunk/regression_test/test_case/test_cases_unit/lower_cpp/unsupported-02.cpp.rpt.expected

ERROR: [LWCPP-301] Pointer-to-member access operator is not supported: (x .* &a) (unsupported-02.cpp:10)
